# Musical-Solar-System

./: .gitignore  OPTIMIZATION_ANALYSIS.md  README.md  analysis_of_optimization_analysis.md  fastquadtree_api.md  instructions.md  makefile  package-lock.json  profile_backend_loading.py  profiling_runs.csv  pyproject.toml  quadtree_library_recommendations.md
backend/: body.py  main.py  music.py  orbit_events.json  physics.py  system.py
backend/music/: __init__.py  constants.py  events.py  note_mapping.py  orbit_events.py  planet_stats.py  utils.py  velocity_pads.py
backend/tests/: test_basic.py
frontend/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  audio.ts  main.tsx  types.ts
frontend/src/audio/: audioContext.ts  audioHelpers.ts  index.ts  noteCreation.ts  noteManager.ts  playback.ts
frontend/src/components/: CustomBodyPanel.css  CustomBodyPanel.tsx  PlanetList.tsx  Sidebar.tsx  SimulationCanvas.tsx  SimulationControls.tsx
frontend/src/hooks/: useCanvasDragging.ts  usePlanetHandlers.ts  usePlanetManagement.ts  usePlanetVisualsAndSample.ts  usePlayback.ts  useSimulation.ts  useSystemState.ts
frontend/src/utils/: canvasHelpers.ts  planetHelpers.ts
