[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Musical Solar System"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
numpy = "^1.26.0"
fastquadtree = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
